# scripttest

./: .git-blame-ignore-revs  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  regen-docs  scripttest.py  setup.cfg  setup.py  test  tox.ini
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  index.txt  news.rst  news.txt
docs/modules/: scripttest.rst  scripttest.txt
scripttest/: __init__.py  backwardscompat.py
tests/: __init__.py  a_script.py  test_index.py  test_string.py  test_testscript.py
